<resources>
    //App properties
    <string name="app_name">ServiceMe</string>
    <!--<string name="api_endpoint">http://10.0.2.2:55398/ServiceMe.svc/</string>-->
    <string name="api_endpoint">http://serviceme247.cloudapp.net:8080/ServiceMe.svc/</string>
    <string name="coming_soon_text">Coming soon!</string>
    <string name="generic_error_text">Sorry we hit an error.</string>
    <string name="refresh_camel_case">refresh</string>
    <string name="please_wait_string">Please wait&#8230;</string>

    //Action settings
    <string name="action_settings">Settings</string>
    <string name="action_user_overview">My overview (User)</string>
    <string name="action_agent_overview">My overview (Agent)</string>
    <string name="action_edit_profile">Edit profile</string>

    //Create User
    <string name="enter_phone_number">Enter a phone number</string>
    <string name="phone_number_hint">+919820055588</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="enter_code_text_message">Enter code from text message</string>
    <string name="verify">Verify</string>
    <string name="invalid_phone_number_text">Invalid phone number.</string>
    <string name="verify_text_hint">0000</string>

    //Profile page
    <string name="title_activity_profile_page">Profile</string>
    <string name="profile_name">Name</string>
    <string name="contact_pref_label">Contact Preference</string>
    <string name="service_address">Service Address</string>
    <string name="mine_text">Mine</string>
    <string name="another_address_text">Another address</string>
    <string name="phone_check_box">Phone</string>
    <string name="add_address">+ Address (mandatory)</string>
    <string name="add_payment_details">+ Payment Details (optional)</string>
    <string name="be_an_agent">+ Be a service provider too (optional)</string>
    <string name="profile_chat_check_box">Chat</string>
    <string name="profile_email_check_box">Email</string>
    <string name="add_email_address">+ Add email (optional)</string>
    <string name="profile_email">Email</string>
    <string name="profile_email_hint">someone@something.com</string>
    <string name="profile_address">Address</string>
    <string name="name_is_mandatory_text">Please enter a name.</string>
    <string name="invalid_email_address">Invalid email address.</string>
    <string name="incomplete_address">Please provide at least a city and country in the address.</string>
    <string name="agent_setup_text">Want to be a service provider?</string>
    <string name="agent_landing_page">Landing page</string>
    <string name="none_radio_button_text">No</string>
    <string name="agent_yes_radio_button_text">Yes</string>
    <string name="agent_radio_button_text">Agent</string>
    <string name="agent_manager_radio_button_text">Yes and a manager</string>
    <string name="client_radio_button_text">Client</string>
    <string name="manager_radio_button_text">Manager</string>
    <string name="first_line_address">Address line 1</string>
    <string name="second_line_address">Address line 2</string>
    <string name="city_text">City (mandatory)</string>
    <string name="postal_code">Postal code (mandatory)</string>
    <string name="country_text">Country (mandatory)</string>
    <string name="address_error_text">Something wrong with the address.</string>

    //UserCaseOverview page
    <string name="title_activity_user_case_overview">My Overview</string>
    <string name="no_requests_text">No requests</string>

    //UserNewUpdateCase
    <string name="title_activity_user_new_update_case">Create a new request</string>
    <string name="title_text_string">Title</string>
    <string name="title_hint_string">A few words to describe your case.</string>
    <string name="request_details_text">Request details</string>
    <string name="request_details_hint">Enter a short description of your request. Use # for keywords.</string>
    <string name="add_budget_text">+ Add budget (optional)</string>
    <string name="case_page_budget_text">Budget in ₹</string>
    <string name="add_my_address">+ Add my address (optional)</string>
    <string name="add_another_address">+ Add another address (optional)</string>
    <string name="missing_title_popup_text">A case needs a title.</string>
    <string name="missing_email_address_text">Email is checked, but no email address entered on profile. Please update your profile.</string>
    <string name="missing_request_details_text">Request details needs to have some information.</string>
    <string name="tags_text">Tag my request</string>
    <string name="tags_autocomplete_hint">Add a tag&#8230;</string>
    <string name="cannot_find_my_tag">Cannot find my tag&#8230;</string>
    <string name="unknown_tag_text">Unknown tag. Please suggest it and we will make it available and let you know.</string>
    <string name="need_atleast_one_tag">Need at least one tag to continue.</string>
    <string name="add_popular_questions_text">My requests</string>
    <string name="pick_a_popular_request">My requests</string>

    //Select agent for case
    <string name="title_activity_select_agent_for_case">Select an agent</string>
    <string name="rating_text">ratings</string>
    <string name="add_favorite_agents">+ Add my favorite service providers</string>
    <string name="add_more_favorite_agents">+ Add more service providers</string>
    <string name="add_agent_autocomplete_hint">Add an agent&#8230;</string>

    //Agent details page for new case
    <string name="title_activity_new_case_agent_info">Service provider info</string>
    <string name="add_as_favorite_button">+ Add as favorite</string>
    <string name="remove_as_favorite_button">- Remove as favorite</string>
    <string name="tags_label_text">Tags</string>
    <string name="area_of_service">Area of Service</string>
    <string name="rating_details_text">Rating details</string>
    <string name="rate_text">Rate&#160;</string>

    //Case details page for user
    <string name="title_activity_user_case_details">Request details</string>
    <string name="rated_user_twice_already">You have rated this person twice already.</string>

    //View agents for case
    <string name="title_activity_view_agents_for_case">Service providers</string>

    //User agent case details
    <string name="title_activity_user_agent_case_details">Service provider details</string>
    <string name="contact_text">Contact</string>
    <string name="quote_timeline_text">Quote and timeline</string>
    <string name="payment_status_text">Payment status</string>
    <string name="notes_text">My notes</string>
    <string name="scratch_pad_hint">Scratch pad&#8230;</string>
    <string name="quote_timeline_format">{0}. {1}</string>
    <string name="assigned_confirmation_text">Case got assigned!</string>
    <string name="not_assigned_text">There was an error assigning the case. Please try again in sometime.</string>

    //Agent tag setup page
    <string name="title_activity_agent_tag_setup">Tags</string>
    <string name="enterprise_tag_text">The below tags need verification codes. Ask your manager for one.</string>
    <string name="code_incorrect_text">The code for the following tag is incorrect. Tag:&#160;</string>
    <string name="code_length_incorrect_text">Verification code is a 4 digit number. Tag:&#160;</string>
    <string name="create_new_tag">Create new tag&#8230;</string>
    <string name="area_of_service_text">Area of service (in Km)</string>
    <string name="area_of_service_default_value">20</string>

    //Agent overview page
    <string name="title_activity_agent_case_overview">My Overview</string>
    <string name="unassigned_text">Unassigned</string>
    <string name="assigned_text">Assigned</string>
    <string name="name_status_format">Customer name: {0}\n\rStatus: {1}</string>
    <string name="name_status_enterprise_format">Customer name: {0}\n\rAssigned: {1}</string>

    //Agent case details
    <string name="title_activity_agent_case_details">Request details</string>
    <string name="user_budget_text">User budget</string>
    <string name="set_quotation_timeline_text">+ Set quotation and timeline</string>

    //User chat room
    <string name="title_activity_user_chat_room">Chat room</string>
    <string name="send_button_text">Send</string>

    //Buttons
    <string name="done_text_button">Done</string>
    <string name="create_new_request">Create New Request</string>
    <string name="next_text_button">Next</string>
    <string name="cancel_text_button">Cancel</string>
    <string name="back_text_button">Back</string>
    <string name="list_of_agents_text_button">List of agents</string>
    <string name="close_request_text_button">Close request</string>
    <string name="assign_case_text_button">Assign case</string>
    <string name="my_queue_text">My queue</string>
    <string name="set_metadata_text_button">Set metadata</string>
    <string name="resolve_text_button">Close</string>
    <string name="close_text_button">Close</string>
    <string name="save_camel_case">save?</string>
    <string name="saved_camel_case">saved</string>
    <string name="save_button_text">Save</string>

    <string name="hello_world">Hello world!</string>
</resources>
