<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:id="@+id/popUpWindowLinearLayout"
    android:clickable="true"
    android:background="#CC000000">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:layout_gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/firstLineAddressEditText"
            android:hint="@string/first_line_address"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/secondLineAddressEditText"
            android:hint="@string/second_line_address"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/cityEditText"
            android:hint="@string/city_text"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/postal_code"
            android:ems="10"
            android:id="@+id/postalCodeEditText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country_text"
            android:ems="10"
            android:id="@+id/countryEditText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/steel_blue"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/userCasePageButtonLinearLayout"
            android:weightSum="2"
            android:background="@color/black"
            android:layout_margin="5dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text_button"
                android:id="@+id/cancelButton"
                android:textSize="@dimen/activity_full_screen_button"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button_text"
                android:id="@+id/saveFeedbackButton"
                android:textSize="@dimen/activity_full_screen_button"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>