<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.karlbuha.serviceme.ProfilePage">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/profileLinearLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/profile_name"
                android:id="@+id/nameTextView" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/nameEditText"
                android:textSize="@dimen/activity_input_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameEditText"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/contact_pref_label"
                android:id="@+id/contactPrefTextView" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_check_box"
                android:id="@+id/phoneCheckBox"
                android:scaleX="1.50"
                android:scaleY="1.50"
                android:layout_marginLeft="@dimen/checkbox_left_margin"
                android:layout_marginTop="@dimen/checkbox_top_margin"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_chat_check_box"
                android:id="@+id/chatCheckBox"
                android:scaleX="1.50"
                android:scaleY="1.50"
                android:layout_marginLeft="@dimen/checkbox_left_margin"
                android:layout_marginTop="@dimen/checkbox_top_margin"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_email_check_box"
                android:id="@+id/emailCheckBox"
                android:scaleX="1.50"
                android:scaleY="1.50"
                android:layout_marginLeft="@dimen/checkbox_left_margin"
                android:layout_marginTop="@dimen/checkbox_top_margin"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:id="@+id/emailLinearLayout"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/profile_email"
                    android:id="@+id/emailTextView" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/emailEditText"
                    android:hint="@string/profile_email_hint"
                    android:textSize="@dimen/activity_input_text"/>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_email_address"
                android:id="@+id/addEmailAddressButton"
                android:background="@color/transparent"
                android:onClick="AddEmailButtonOnClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailCheckBox"
                android:text="@string/add_address"
                android:id="@+id/addAddressButton"
                android:background="@color/transparent"
                android:onClick="AddAddressButtonOnClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_payment_details"
                android:id="@+id/addPaymentDetailsButton"
                android:background="@color/transparent"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/be_an_agent"
                android:id="@+id/beAnAgentButton"
                android:background="@color/transparent"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/profilePageButtonLinearLayout"
        android:weightSum="3"
        android:background="@color/black">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_text_button"
            android:id="@+id/doneButton"
            android:textSize="@dimen/activity_full_screen_button"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
