<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.karlbuha.serviceme.UserNewUpdateCase"
    android:id="@+id/mainRelativeLayout">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/button_bar_height"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/basicInfoLinearLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_text_string"
                android:id="@+id/titleTextView" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/casePageTitleEditText"
                android:textSize="@dimen/activity_input_text"
                android:hint="@string/title_hint_string"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/detailsLabelTextView"
                    android:text="@string/request_details_text"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_popular_questions_text"
                    android:id="@+id/addPopularRequestsButton"
                    android:background="@color/transparent"
                    android:onClick="AddPopularRequestsButtonOnClick"
                    android:textColor="@color/link_blue"
                    android:layout_weight="1"/>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/requestDetailsEditText"
                android:gravity="top"
                android:hint="@string/request_details_hint"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/contact_pref_label"
                android:id="@+id/contactPrefTextView" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_check_box"
                android:id="@+id/phoneCheckBox"
                android:layout_marginTop="@dimen/checkbox_top_margin"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_chat_check_box"
                android:id="@+id/chatCheckBox"
                android:layout_marginTop="@dimen/checkbox_top_margin"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_email_check_box"
                android:id="@+id/emailCheckBox"
                android:layout_marginTop="@dimen/checkbox_top_margin"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:id="@+id/budgetLinearLayout"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/case_page_budget_text"
                    android:id="@+id/budgetTextView" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/budgetEditText"
                    android:textSize="@dimen/activity_input_text"/>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_budget_text"
                android:id="@+id/addBudgetButton"
                android:background="@color/transparent"
                android:onClick="AddBudgetButtonOnClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_my_address"
                android:id="@+id/addMyAddressButton"
                android:background="@color/transparent"
                android:onClick="AddMyAddressButtonOnClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_another_address"
                android:id="@+id/addAnotherAddressButton"
                android:background="@color/transparent"
                android:onClick="AddAnotherAddressButtonOnClick"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/tagsLinearLayout">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="5dp"
                    android:background="@color/purple"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/tags_text"
                        android:id="@+id/tagsTextView"
                        android:layout_weight="1"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/refresh_camel_case"
                        android:id="@+id/refreshTagsButton"
                        android:background="@color/transparent"
                        android:onClick="RefreshTagsButtonOnClick"
                        android:textColor="@color/link_blue"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tags_autocomplete_hint"
                        android:id="@+id/tagAutoCompleteTextView"
                        android:layout_weight="1"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="+"
                        android:textSize="@dimen/plus_add_button"
                        android:id="@+id/addTagsButton"
                        android:background="@color/transparent"
                        android:onClick="AddTagsButtonOnClick"
                        android:layout_weight="1"/>
                </LinearLayout>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cannot_find_my_tag"
                    android:id="@+id/cannotFindTagButton"
                    android:background="@color/transparent"
                    android:onClick="CannotFindTagButtonOnClick"
                    android:textColor="@color/link_blue"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/userCasePageButtonLinearLayout"
        android:weightSum="2"
        android:background="@color/black"
        style="?android:attr/buttonBarStyle">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_bar_height"
            android:text="@string/next_text_button"
            android:id="@+id/nextForTagsButton"
            android:textSize="@dimen/activity_full_screen_button"
            android:layout_weight="1"
            android:onClick="NextForTagsButtonOnClick"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_bar_height"
            android:text="@string/cancel_text_button"
            android:id="@+id/cancelButton"
            android:textSize="@dimen/activity_full_screen_button"
            android:layout_weight="1"
            android:onClick="CancelButtonOnClick"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</RelativeLayout>
