<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".NewUser">

    <TextView android:text="@string/enter_phone_number" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumberTextView"
        android:textSize="@dimen/activity_input_label"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneNumberEditText"
        android:layout_below="@+id/phoneNumberTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/activity_input_phone_number"
        android:hint="@string/phone_number_hint"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:text="@string/send_verification_code"
        android:id="@+id/sendVerificationCodeButton"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/phoneNumberEditText"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/activity_text_size_button"/>

</RelativeLayout>
